--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <h1>Games With Tony</h1>
     <h2>Online Helpers</h2>
     <p><a href="/onmars">On Mars: Pathfinder and Lacerda Solo Helper</a></p>
+    <p><a href="/kanbanev">Kanban EV Solo Helper</a></p>
     <p><a href="/nemoswar">Nemo's War: Online Dice Roller</a></p>
     <h2>Solo Modes</h2>
     <p><a href="https://boardgamegeek.com/filepage/211160/pathfinder-unofficial-mars-solo-mode-w-curiosity-s">Pathfinder - An Unofficial On Mars Solo Mode (w/ Curiosity Solo Campaign)</a></p>
