--- a/kanbanev/index.html
+++ b/kanbanev/index.html
@@ -85,7 +85,8 @@
                     <strong>How To Use This App</strong>
                     <li>Begin by selecting your player color and starting position on the certification track.</li>
                     <li>The app will cycle between the Department Selection and Working phases of the game.</li>
-                    <li>During department selection, you must select the department and workstation for yourself and Sandra.</li>
+                    <li>During department selection, you must select the department and workstation for yourself.</li>
+                    <li>During department selection, the next available workstation will be automatically chosen for Sandra (except for the first day of the game, where she sits at her desk).</li>
                     <li>During department selection a department will be chosen for Mr. Lacerda and Mr. Turczi. You may change their department if the pre-selected one is not possible.</li>
                     <li>The possible locations for Mr. Lacerda and Mr. Turczi (i.e. the column of cards, or what is left of them) is shown at the top of the screen as small yellow department icons. This helps you anticipate where the bots may be placed.</li>
                     <li>During the working phase, the app will display each player in turn order and show the department the player is working in.</li>
