--- a/kanbanev/index.html
+++ b/kanbanev/index.html
@@ -230,7 +230,7 @@
                             Once he is certified, he provides an additional Part.
                         </span>
                         <span v-if="lacerdaIsCertified">
-                            <span class="instructions-important">Mr. Lacerda IS CERTIFIED!<br /></span>Because he is certified, Mr. Lacerda provides an additional Part.
+                            <span class="instructions-important">Mr. Lacerda IS CERTIFIED<br /></span>Because he is certified, Mr. Lacerda provides an additional Part.
                         </span>
                     </li>
                 </ul>
